--- a/AssetManagement/AssetManagement.csproj
+++ b/AssetManagement/AssetManagement.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.1.20-alpha" />
+      <Reference Include="DenOfIzGraphics">
+        <HintPath>..\..\..\.nuget\packages\denofizgraphics\0.1.17-alpha\lib\netstandard2.0\DenOfIzGraphics.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
