--- a/AssetManagement/AssetManagement.csproj
+++ b/AssetManagement/AssetManagement.csproj
@@ -12,4 +12,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DenOfIzGraphics" Version="0.2.0-alpha" />
+    </ItemGroup>
+
 </Project>
