--- a/AssetManagement/AssetManagement.csproj
+++ b/AssetManagement/AssetManagement.csproj
@@ -13,7 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.2.0-alpha" />
+      <PackageReference Include="DenOfIzGraphics" Version="0.2.3-alpha" />
+      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     </ItemGroup>
 
 </Project>
