--- a/Graphics/Graphics.csproj
+++ b/Graphics/Graphics.csproj
@@ -1,7 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -10,11 +9,6 @@
 
     <ItemGroup>
       <PackageReference Include="DenOfIzGraphics" Version="0.2.3-alpha" />
-      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Graphics\Graphics.csproj" />
     </ItemGroup>
 
 </Project>
