--- a/ImportAssets/ImportAssets.csproj
+++ b/ImportAssets/ImportAssets.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.2.0-alpha" />
+      <PackageReference Include="DenOfIzGraphics" Version="0.2.3-alpha" />
+      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     </ItemGroup>
 
 </Project>
