--- a/Graphics/Graphics.csproj
+++ b/Graphics/Graphics.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.2.3-alpha" />
+      <PackageReference Include="DenOfIzGraphics" Version="0.2.7-alpha" />
+      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     </ItemGroup>
 
 </Project>
