--- a/DenOfIz.Application/DenOfIz.Application.csproj
+++ b/DenOfIz.Application/DenOfIz.Application.csproj
@@ -1,22 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="DenOfIzGraphics" Version="0.2.7-alpha" />
-      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DenOfIz.Application\DenOfIz.Application.csproj" />
-      <ProjectReference Include="..\DenOfIz.Graphics\DenOfIz.Graphics.csproj" />
-      <ProjectReference Include="..\DenOfIz.UI\DenOfIz.UI.csproj" />
+      <ProjectReference Include="..\DenOfIz.ECS\DenOfIz.ECS.csproj" />
     </ItemGroup>
 
 </Project>
