--- a/DenOfIz.Graphics/DenOfIz.Graphics.csproj
+++ b/DenOfIz.Graphics/DenOfIz.Graphics.csproj
@@ -1,14 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>Graphics</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="DenOfIzGraphics" Version="0.2.7-alpha" />
+      <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DenOfIz.ECS\DenOfIz.ECS.csproj" />
     </ItemGroup>
 
 </Project>
