--- a/DenOfIz.RuntimeAssets/DenOfIz.RuntimeAssets.csproj
+++ b/DenOfIz.RuntimeAssets/DenOfIz.RuntimeAssets.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>RuntimeAssets</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.2.7-alpha" />
+      <PackageReference Include="SharpGLTF.Core" Version="1.0.5" />
     </ItemGroup>
 
 </Project>
