--- a/DenOfIz.Application/DenOfIz.Application.csproj
+++ b/DenOfIz.Application/DenOfIz.Application.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DenOfIz.ECS\DenOfIz.ECS.csproj" />
+      <ProjectReference Include="..\DenOfIz.Graphics\DenOfIz.Graphics.csproj" />
     </ItemGroup>
 
 </Project>
