--- a/DenOfIz.ECS/DenOfIz.ECS.csproj
+++ b/DenOfIz.ECS/DenOfIz.ECS.csproj
@@ -4,11 +4,12 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>ECS</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DenOfIzGraphics" Version="0.2.7-alpha" />
+      <PackageReference Include="DenOfIzGraphics" Version="0.3.0-alpha" />
     </ItemGroup>
 
 </Project>
