--- a/DenOfIz.Application/DenOfIz.Application.csproj
+++ b/DenOfIz.Application/DenOfIz.Application.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="DenOfIzGraphics" Version="0.4.1-alpha" />
+        <PackageReference Include="Flecs.NET" Version="4.0.4-build.548" />
+        <PackageReference Include="Flecs.NET.Release" Version="4.0.4-build.548" />
     </ItemGroup>
 
     <ItemGroup>
