--- a/DenOfIz.Physics/DenOfIz.Physics.csproj
+++ b/DenOfIz.Physics/DenOfIz.Physics.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="BepuPhysics" Version="2.4.0"/>
+        <PackageReference Include="Flecs.NET" Version="4.0.4-build.548" />
+        <PackageReference Include="Flecs.NET.Release" Version="4.0.4-build.548" />
     </ItemGroup>
 
     <ItemGroup>
