--- a/DenOfIz.Core/DenOfIz.Core.csproj
+++ b/DenOfIz.Core/DenOfIz.Core.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Physics</RootNamespace>
+        <RootNamespace>DenOfIz.Core</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BepuPhysics" Version="2.4.0"/>
+        <PackageReference Include="DenOfIzGraphics" Version="0.5.1-alpha" />
     </ItemGroup>
 
 </Project>
