Various utility functions to create resources in render passes

--- a/DenOfIz.Graphics/DenOfIz.Graphics.csproj
+++ b/DenOfIz.Graphics/DenOfIz.Graphics.csproj
@@ -17,4 +17,8 @@
         <ProjectReference Include="..\DenOfIz.Tasks\DenOfIz.Tasks.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="RootSignatures\" />
+    </ItemGroup>
+
 </Project>
