--- a/NiziKit/NiziKit.csproj
+++ b/NiziKit/NiziKit.csproj
@@ -10,9 +10,15 @@
 
     <ItemGroup>
       <PackageReference Include="BepuPhysics" Version="2.4.0" />
-      <PackageReference Include="DenOfIzGraphics" Version="0.5.5-alpha" />
+      <PackageReference Include="DenOfIzGraphics" Version="0.5.6-alpha" />
       <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
       <PackageReference Include="SharpGLTF.Core" Version="1.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="Graphics\BuiltInShaders\**\*">
+        <LogicalName>NiziKit.Graphics.BuiltInShaders.%(Filename)%(Extension)</LogicalName>
+      </EmbeddedResource>
     </ItemGroup>
 
 </Project>
