--- a/NiziKit.Editor/NiziKit.Editor.csproj
+++ b/NiziKit.Editor/NiziKit.Editor.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -10,9 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.3" />
-        <PackageReference Include="Avalonia.Skia" Version="11.2.3" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
+        <PackageReference Include="Avalonia" Version="11.3.7" />
+        <PackageReference Include="Avalonia.Skia" Version="11.3.7" />
+        <PackageReference Include="Semi.Avalonia" Version="11.3.7.1" />
+        <PackageReference Include="bodong.Avalonia.PropertyGrid" Version="11.1.1.1" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="Dock.Avalonia" Version="11.3.2" />
+        <PackageReference Include="Dock.Avalonia.Themes.Fluent" Version="11.3.2" />
+        <PackageReference Include="Dock.Model.Mvvm" Version="11.3.2" />
     </ItemGroup>
 
     <ItemGroup>
