--- a/NiziKit.Editor/NiziKit.Editor.csproj
+++ b/NiziKit.Editor/NiziKit.Editor.csproj
@@ -12,7 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.3.7" />
         <PackageReference Include="Avalonia.Skia" Version="11.3.7" />
-        <PackageReference Include="Semi.Avalonia" Version="11.3.7.1" />
+        <PackageReference Include="FluentAvaloniaUI" Version="2.3.0" />
         <PackageReference Include="bodong.Avalonia.PropertyGrid" Version="11.1.1.1" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     </ItemGroup>
