--- a/NiziKit/NiziKit.csproj
+++ b/NiziKit/NiziKit.csproj
@@ -17,6 +17,8 @@
       <PackageReference Include="BepuPhysics" Version="2.4.0" />
       <PackageReference Include="DenOfIzGraphics" Version="0.7.1-alpha" />
       <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
       <PackageReference Include="Pure.DI" Version="2.3.1">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
