--- a/NiziKit.Editor/NiziKit.Editor.csproj
+++ b/NiziKit.Editor/NiziKit.Editor.csproj
@@ -10,9 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.3.7" />
-        <PackageReference Include="Avalonia.Skia" Version="11.3.7" />
+        <PackageReference Include="Avalonia" Version="11.3.9" />
+        <PackageReference Include="Avalonia.Skia" Version="11.3.9" />
         <PackageReference Include="FluentAvaloniaUI" Version="2.3.0" />
+        <PackageReference Include="AtomUI.Desktop.Controls" Version="5.1.0" />
         <PackageReference Include="bodong.Avalonia.PropertyGrid" Version="11.1.1.1" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     </ItemGroup>
