Standardize paths accross the board

--- a/DZForestDemo/Assets/manifest.json
+++ b/DZForestDemo/Assets/manifest.json
@@ -1,185 +1,9 @@
 {
   "version": "1.0.0",
-  "assets": [
-    {
-      "path": ".niziassets",
-      "size": 234,
-      "hash": "cbe67a4d09b06fa1"
-    },
-    {
-      "path": "manifest.json",
-      "size": 74678,
-      "hash": "95d4641be272782a"
-    },
-    {
-      "path": "Textures/.gitkeep",
-      "size": 0,
-      "hash": "e3b0c44298fc1c14"
-    },
-    {
-      "path": "Textures/Texture.png",
-      "size": 26764,
-      "hash": "61c8b109ee7f8bf2"
-    },
-    {
-      "path": "Textures/Fox_Texture.dztex",
-      "size": 4194436,
-      "hash": "cc746c250dd5ad0b"
-    },
-    {
-      "path": "Models/.gitkeep",
-      "size": 0,
-      "hash": "e3b0c44298fc1c14"
-    },
-    {
-      "path": "Models/Fox.glb",
-      "size": 270496,
-      "hash": "fcd296449c85be57"
-    },
-    {
-      "path": "Models/Fox_Run.ozz",
-      "size": 6019,
-      "hash": "080573a1a7f0f500"
-    },
-    {
-      "path": "Models/Fox_Survey.ozz",
-      "size": 17213,
-      "hash": "c2de973ba8ad2e2e"
-    },
-    {
-      "path": "Models/Fox.bin",
-      "size": 119904,
-      "hash": "c7d0d8de28a84d5b"
-    },
-    {
-      "path": "Models/Fox.gltf",
-      "size": 31974,
-      "hash": "73dd71969a093df8"
-    },
-    {
-      "path": "Models/Texture.png",
-      "size": 26764,
-      "hash": "61c8b109ee7f8bf2"
-    },
-    {
-      "path": "Models/Fox_skeleton.ozz",
-      "size": 1388,
-      "hash": "4255ed25ae35095f"
-    },
-    {
-      "path": "Meshes/fox1.dzmesh",
-      "size": 145344,
-      "hash": "468e70096a55fd66"
-    },
-    {
-      "path": "Skeletons/Fox_skeleton.ozz",
-      "size": 1388,
-      "hash": "4255ed25ae35095f"
-    },
-    {
-      "path": "Shaders/AnimatedSnake.PS.hlsl",
-      "size": 1335,
-      "hash": "b2770bd6b1267f17"
-    },
-    {
-      "path": "Shaders/.gitkeep",
-      "size": 0,
-      "hash": "e3b0c44298fc1c14"
-    },
-    {
-      "path": "Shaders/GlowingFood.PS.hlsl",
-      "size": 1297,
-      "hash": "60d844dc6f831418"
-    },
-    {
-      "path": "Animations/.gitkeep",
-      "size": 0,
-      "hash": "e3b0c44298fc1c14"
-    },
-    {
-      "path": "Animations/Fox_Run.ozz",
-      "size": 6019,
-      "hash": "080573a1a7f0f500"
-    },
-    {
-      "path": "Animations/Fox_Survey.ozz",
-      "size": 17213,
-      "hash": "c2de973ba8ad2e2e"
-    },
-    {
-      "path": "Shaders/Default/Default.VS.hlsl",
-      "size": 1700,
-      "hash": "024ea8838ede2e34"
-    },
-    {
-      "path": "Shaders/NiziKit/Bindings/Draw.hlsl",
-      "size": 406,
-      "hash": "0d5a98ce54138ff9"
-    },
-    {
-      "path": "Shaders/NiziKit/Bindings/View.hlsl",
-      "size": 1180,
-      "hash": "003a3a582a0eab7d"
-    },
-    {
-      "path": "Shaders/NiziKit/Bindings/Material.hlsl",
-      "size": 381,
-      "hash": "e9b0f97e907ad1f8"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/color/hueShift.hlsl",
-      "size": 877,
-      "hash": "3319652e7a89b0e2"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/math/grad4.hlsl",
-      "size": 574,
-      "hash": "21315d2f0eb7fde9"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/math/const.hlsl",
-      "size": 1373,
-      "hash": "ae98b8c51dd050ab"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/math/mod289.hlsl",
-      "size": 490,
-      "hash": "c187b130048d43cf"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/math/taylorInvSqrt.hlsl",
-      "size": 582,
-      "hash": "13637883bfcba701"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/math/permute.hlsl",
-      "size": 502,
-      "hash": "45f397ba96b3fac0"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/generative/snoise.hlsl",
-      "size": 7669,
-      "hash": "ba02e10b167dfddf"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/color/space/rgb2hcv.hlsl",
-      "size": 935,
-      "hash": "bf794f14e8854344"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/color/space/hsl2rgb.hlsl",
-      "size": 684,
-      "hash": "3efc29d528337057"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/color/space/rgb2hsl.hlsl",
-      "size": 800,
-      "hash": "e598eae7d9f0e96f"
-    },
-    {
-      "path": "Shaders/NiziKit/lygia/color/space/hue2rgb.hlsl",
-      "size": 602,
-      "hash": "7439b58c9c12aebd"
-    }
-  ]
+  "packs": [
+    "Packs/newpack.nizipack.json",
+    "Packs/newpack_1.nizipack.json",
+    "Packs/viking.nizipack.json"
+  ],
+  "assets": []
 }
