--- a/DZForestDemo/Assets/manifest.json
+++ b/DZForestDemo/Assets/manifest.json
@@ -1,9 +1,21 @@
 {
   "version": "1.0.0",
   "packs": [
-    "Packs/newpack.nizipack.json",
-    "Packs/newpack_1.nizipack.json",
-    "Packs/viking.nizipack.json"
+    {
+      "name": "newpack",
+      "path": "Packs/newpack.nizipack.json",
+      "deploymentName": "newpack.nizipack"
+    },
+    {
+      "name": "newpack_1",
+      "path": "Packs/newpack_1.nizipack.json",
+      "deploymentName": "newpack_1.nizipack"
+    },
+    {
+      "name": "viking",
+      "path": "Packs/viking.nizipack.json",
+      "deploymentName": "viking.nizipack"
+    }
   ],
   "assets": []
 }
