Improved new UI library + Embed font awesome

--- a/DZForestDemo/DZForestDemo.csproj
+++ b/DZForestDemo/DZForestDemo.csproj
@@ -25,6 +25,10 @@
       </EmbeddedResource>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Assets\Fonts\" />
+    </ItemGroup>
+
     <Import Project="..\NiziKit\build\NiziKit.targets" />
 
 </Project>
